--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 </ul>
             </nav>
             <div class="header-text">
+                <img src="./assets/img/IMG_1631-removebg.png" alt="hero-landing" class="hero-img">
                 <p>BSIT-CST Student</p>
                 <h1>Hi, I'm <span>WEJ</span> <br> from FEU Tech </h1>
             </div>
